Fix minor issues with alignment and hiding

--- a/app/assets/stylesheets/social/mini_schedules.css
+++ b/app/assets/stylesheets/social/mini_schedules.css
@@ -1,6 +1,8 @@
 .friend-box
 {
   display: inline-block;
+  vertical-align: top;
+  
   margin-left: 20px;
   margin-right: 55px;
   margin-bottom: 20px;
